--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Contato</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="app.js"></script>
 </head>
 <body>
-    
+    <form action="https://formsubmit.co/ajax/felippelpximenes@outlook.com" method="POST" data-form>
+        <label for="nome">Nome</label>
+        <input type="text" name="nome" id="nome" required/>
+        <label for="email">E-mail</label>
+        <input type="email" name="email" id="email" required/>
+        <label for="mensagem">Mensagem</label>
+        <textarea name="mensagem" id="mensagem" required></textarea>
+        <button type="submit" data-button>Enviar</button>
+    </form>
 </body>
 </html>
